--- a/index.html
+++ b/index.html
@@ -20,12 +20,15 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav mr-auto mt-2 mt-lg-0 mLetra">
-              <li class="nav-item active ">
-                <a class="nav-link" href="https://alejandralis.github.io/e-gobierno/">Contratación Internacional <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="#">Industrialización y exportación de la Garapiña Boliviana <span class="sr-only">(current)</span></a>
-              </li>
+              <<li class="nav-item active ">
+              <a class="nav-link" href="https://alejandralis.github.io/e-gobierno/">Contratación Internacional<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active ">
+              <a class="nav-link" href="https://alejandralis.github.io/zonascomerciales/">Acuerdos Comerciales<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item active">
+              <a class="nav-link" href="https://alejandralis.github.io/economiacreativa/">Economía Creativa<span class="sr-only">(current)</span></a>
+            </li>
             </ul>
           </div>
         </nav>
